# axum-tools

./: Cargo.toml  readme.md
axum-minijinja/: Cargo.toml
axum-minijinja/src/: engine.rs  lib.rs
examples/axum-minijinja-simple/: Cargo.toml
examples/axum-minijinja-simple/src/: main.rs
examples/axum-minijinja-simple/views/: index.html
